--- a/watermarking-attack/pyproject.toml
+++ b/watermarking-attack/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "numpy>=2.2.3",
+    "torch>=2.6.0",
+    "torchvision>=0.21.0",
+    "numpy>=2.2.3"
 ]
 
 [dependency-groups]
