--- a/watermarking-attack/pyproject.toml
+++ b/watermarking-attack/pyproject.toml
@@ -34,3 +34,11 @@ explicit = true
 name = "pytorch-cu121"
 url = "https://download.pytorch.org/whl/cu121"
 explicit = true
+
+[tool.uv]
+required-environments = [
+  "sys_platform = 'windows'",
+  "sys_platform = 'linux'",
+  "sys_platform = 'darwin' and platform_machine = 'x86_64'",
+  "sys_platform = 'darwin' and platform_machine = 'amd64'",
+]
