--- a/watermarking-attack/pyproject.toml
+++ b/watermarking-attack/pyproject.toml
@@ -37,8 +37,8 @@ explicit = true
 
 [tool.uv]
 required-environments = [
-  "sys_platform = 'windows'",
-  "sys_platform = 'linux'",
-  "sys_platform = 'darwin' and platform_machine = 'x86_64'",
-  "sys_platform = 'darwin' and platform_machine = 'amd64'",
+  "sys_platform == 'windows'",
+  "sys_platform == 'linux'",
+  "sys_platform == 'darwin' and platform_machine == 'x86_64'",
+  "sys_platform == 'darwin' and platform_machine == 'amd64'",
 ]
