--- a/watermarking-attack/pyproject.toml
+++ b/watermarking-attack/pyproject.toml
@@ -3,9 +3,9 @@ name = "watermarking-attack"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = "==3.12"
 dependencies = [
-    "torch<2.3.0",
+    "torch==2.2.2",
     "torchvision",
     "numpy"
 ]
@@ -17,28 +17,13 @@ dev = [
 
 [tool.uv.sources]
 torch = [
-  { index = "pytorch-cpu", marker = "sys_platform == 'darwin' and platform_machine == 'x86_64'" },
   { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
 ]
 torchvision = [
-  { index = "pytorch-cpu", marker = "sys_platform == 'darwin' and platform_machine == 'x86_64'" },
   { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
 ]
-
-[[tool.uv.index]]
-name = "pytorch-cpu"
-url = "https://download.pytorch.org/whl/cpu"
-explicit = true
 
 [[tool.uv.index]]
 name = "pytorch-cu121"
 url = "https://download.pytorch.org/whl/cu121"
 explicit = true
-
-[tool.uv]
-required-environments = [
-  "sys_platform == 'windows'",
-  "sys_platform == 'linux'",
-  "sys_platform == 'darwin' and platform_machine == 'x86_64'",
-  "sys_platform == 'darwin' and platform_machine == 'amd64'",
-]
