--- a/watermarking-attack/pyproject.toml
+++ b/watermarking-attack/pyproject.toml
@@ -3,11 +3,11 @@ name = "watermarking-attack"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = "==3.12"
+requires-python = "==3.12.6"
 dependencies = [
     "torch==2.2.2",
     "torchvision",
-    "numpy"
+    "numpy<2"
 ]
 
 [dependency-groups]
