--- a/watermarking-attack/pyproject.toml
+++ b/watermarking-attack/pyproject.toml
@@ -7,7 +7,8 @@ requires-python = "==3.12.6"
 dependencies = [
     "torch==2.2.2",
     "torchvision",
-    "numpy<2"
+    "numpy<2",
+    "kagglehub>=0.3.10",
 ]
 
 [dependency-groups]
