--- a/watermarking-attack/pyproject.toml
+++ b/watermarking-attack/pyproject.toml
@@ -9,6 +9,13 @@ dependencies = [
     "torchvision",
     "numpy<2",
     "kagglehub>=0.3.10",
+    "opencv-python>=4.11.0.86",
+    "pandas>=2.2.3",
+    "matplotlib>=3.10.1",
+    "scikit-learn>=1.6.1",
+    "seaborn>=0.13.2",
+    "pillow>=11.1.0",
+    "mlxtend>=0.23.4",
 ]
 
 [dependency-groups]
